ih8sn: Spoof vendor security patch
Signed-off-by: pawar-mahesh <pawar.mahesh2345@gmail.com>

--- a/system/etc/ih8sn.conf
+++ b/system/etc/ih8sn.conf
@@ -1,6 +1,7 @@
 BUILD_FINGERPRINT=Mi/aliothin/aliothin:12/SKQ1.211006.001/V13.0.10.0.SKHINXM:user/release-keys
 BUILD_DESCRIPTION=aliothin-user 12 SKQ1.211006.001 V13.0.10.0.SKHINXM release-keys
 BUILD_SECURITY_PATCH_DATE=2023-01-01
+VENDOR_SECURITY_PATCH_DATE=2023-01-01
 BUILD_TAGS=release-keys
 BUILD_TYPE=user
 BUILD_VERSION_DEVICE_INITIAL_SDK_INT=30
@@ -11,5 +12,5 @@ MANUFACTURER_NAME=Xiaomi
 PRODUCT_BRAND=Mi
 PRODUCT_DEVICE=aliothin
 PRODUCT_MODEL=M2012K11AI
-PRODUCT_NAME=Mi 11X 
+PRODUCT_NAME=Mi 11X
 SECURE=1
